--- a/chapter5-postprocess.tex
+++ b/chapter5-postprocess.tex
@@ -1,6 +1,7 @@
 \chapter{Fairness through post-processing}
 \label{fairness_postproc}
 
+\section{baseline rerankers}
 \section{A survey of re-rankers} ( adding some overall experiments to compare methods)
 \section{FAR/PFAR}
 \section{OFAIR}
