--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \usepackage{bbm}
 
 
+\newtheorem{definition}{Definition}
 \newcommand{\libauto}{\texttt{librec-auto}}
 %%%%%%%%%%%%   All the preamble material:   %%%%%%%%%%%%
 
