--- a/refs.bib
+++ b/refs.bib
@@ -2754,15 +2754,6 @@ ISSN={1083-4427},}
   address={Heidelberg, Germany}
 }
 
-@article{desrosiers2011comprehensive,
-  title={A comprehensive survey of neighborhood-based recommendation methods},
-  author={Desrosiers, C. and Karypis, G.},
-  journal={Recommender Systems Handbook},
-  pages={107--144},
-  year={2011},
-  publisher={Springer}
-}
-
 @article{Adomavicius:2005:ICI:1055709.1055714,
  author = {Adomavicius, Gediminas and Sankaranarayanan, Ramesh and Sen, Shahana and Tuzhilin, Alexander},
  title = {Incorporating contextual information in recommender systems using a multidimensional approach},
@@ -4471,33 +4462,6 @@ archivePrefix = {arXiv},
 }
 
 
-@inproceedings{mansoury2019algorithm,
-  title={Algorithm Selection with Librec-auto.},
-  author={Mansoury, Masoud and Burke, Robin},
-  pages={11-17},
-  year={2019},
-  url={http://ceur-ws.org/Vol-2360/paper3LibRecAuto.pdf},
-  booktitle={The 1st Interdisciplinary Workshop on Algorithm Selection and Meta-Learning in Information Retrieval (AMIR). Co-located with the 41st European Conference on Information Retrieval (ECIR). http://amir-workshop.org/},
-  location={Cologne, Germany},
-  editor={Joeran Beel and Lars Kotthoff}
-  
-}
-
-@inproceedings{mansoury2018automating,
-author = {Mansoury, Masoud and Burke, Robin and Ordonez-Gauger, Aldo and Sepulveda, Xavier},
-title = {Automating Recommender Systems Experimentation with Librec-Auto},
-year = {2018},
-isbn = {9781450359016},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/3240323.3241614},
-doi = {10.1145/3240323.3241614},
-pages = {500–501},
-numpages = {2},
-location = {Vancouver, British Columbia, Canada},
-series = {RecSys '18}
-}
-
 @article{1Muhammad2019facebookads,
 author = {Ali, Muhammad and Sapiezynski, Piotr and Bogen, Miranda and Korolova, Aleksandra and Mislove, Alan and Rieke, Aaron},
 title = {Discrimination through Optimization: How Facebook's Ad Delivery Can Lead to Biased Outcomes},
@@ -4620,6 +4584,10 @@ series = {RecSys ’19}
   year={1998},
   publisher={Springer}
 }
+
+
+@article{entropy1948,  author={Shannon, C. E.},  journal={The Bell System Technical Journal},   title={A mathematical theory of communication},   year={1948},  volume={27},  number={3},  pages={379-423},  doi={10.1002/j.1538-7305.1948.tb01338.x}}
+
 
 @inproceedings{singh2018fairness,
   title={Fairness of exposure in rankings},
@@ -5751,3 +5719,49 @@ series = {WSDM '14}
  pages={2825--2830},
  year={2011}
 }
+
+@Inbook{desrosiers2011comprehensive,
+author="Desrosiers, Christian
+and Karypis, George",
+editor="Ricci, Francesco
+and Rokach, Lior
+and Shapira, Bracha
+and Kantor, Paul B.",
+title="A Comprehensive Survey of Neighborhood-based Recommendation Methods",
+bookTitle="Recommender Systems Handbook",
+year="2011",
+publisher="Springer US",
+address="Boston, MA",
+pages="107--144",
+isbn="978-0-387-85820-3",
+doi="10.1007/978-0-387-85820-3_4",
+url="https://doi.org/10.1007/978-0-387-85820-3_4"
+}
+
+@misc{lee2001algorithms,
+  title={Algorithms for non-negative matrix factorization Advances in Neural Information Processing 13 (Proc. NIPS∗ 2000)},
+  author={Lee, DD and Seung, HS},
+  year={2001},
+  publisher={MIT Press}
+}
+
+@inproceedings{zhang2006learning,
+  title={Learning from incomplete ratings using non-negative matrix factorization},
+  author={Zhang, Sheng and Wang, Weihong and Ford, James and Makedon, Fillia},
+  booktitle={Proceedings of the 2006 SIAM international conference on data mining},
+  pages={549--553},
+  year={2006},
+  organization={SIAM}
+}
+
+@ARTICLE{koren20009mf,
+  author={Koren, Yehuda and Bell, Robert and Volinsky, Chris},
+  journal={Computer}, 
+  title={Matrix Factorization Techniques for Recommender Systems}, 
+  year={2009},
+  volume={42},
+  number={8},
+  pages={30-37},
+  doi={10.1109/MC.2009.263},
+  publisher={IEEE}}
+  
