--- a/refs_libauto.bib
+++ b/refs_libauto.bib
@@ -458,3 +458,31 @@ numpages = {1},
 location = {Barcelona, Spain},
 series = {FAT* '20}
 }
+
+
+@inproceedings{mansoury2019algorithm,
+  title={Algorithm Selection with Librec-auto.},
+  author={Mansoury, Masoud and Burke, Robin},
+  pages={11-17},
+  year={2019},
+  url={http://ceur-ws.org/Vol-2360/paper3LibRecAuto.pdf},
+  booktitle={The 1st Interdisciplinary Workshop on Algorithm Selection and Meta-Learning in Information Retrieval (AMIR). Co-located with the 41st European Conference on Information Retrieval (ECIR). http://amir-workshop.org/},
+  location={Cologne, Germany},
+  editor={Joeran Beel and Lars Kotthoff}
+  
+}
+
+@inproceedings{mansoury2018automating,
+author = {Mansoury, Masoud and Burke, Robin and Ordonez-Gauger, Aldo and Sepulveda, Xavier},
+title = {Automating Recommender Systems Experimentation with Librec-Auto},
+year = {2018},
+isbn = {9781450359016},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3240323.3241614},
+doi = {10.1145/3240323.3241614},
+pages = {500–501},
+numpages = {2},
+location = {Vancouver, British Columbia, Canada},
+series = {RecSys '18}
+}
